# serde_migrate

./: Cargo.toml  README.md
serde_migrate/: Cargo.toml
serde_migrate/benches/: serialization.rs
serde_migrate/src/: lib.rs
serde_migrate/tests/: test2.rs  test3.rs  test_deep.rs  test_from_unversioned.rs  test_serde_attrs.rs  test_simple_generics.rs
serde_migrate_macros/: Cargo.toml
serde_migrate_macros/src/: lib.rs
src/: lib.rs
tests/: test1.rs  test2.rs  test3.rs
