[package]
name = "serde_migrate"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }

[dev-dependencies]
serde_json = "1.0"
bincode = "1.0"