[package]
name = "serde_migrate"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_migrate_macros = { path = "../serde_migrate_macros" }

[dev-dependencies]
serde_json = "1.0"
bincode = "1.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "serialization"
harness = false